@@ -1,3 +1,14 @@
+2011-10-30  Takaaki ISHIKAWA  <takaxp@ieee.org>
+
+	* .emacs.d/takaxp-utility.el (toggle-single-wide-frame): 
+	Change functions to use e2wm with two perspective
+	toggle-single-wide-frame: set default size without e2wm.
+	toggle-double-wide-frame: set frame double size, and e2wm.
+
+2011-10-30  Takaaki ISHIKAWA  <takaxp@ieee.org>
+
+	* takaxp-face.el (e2wm): Add config. for e2wm
+
 2011-10-23  Takaaki ISHIKAWA  <takaxp@ieee.org>
 
 	* takaxp-init.el: Remove config. for sense-region.el
